<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fl_recipe_steps">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvRecipeSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>
</ScrollView>